# redis-file-transfer

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample.py  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.jinja2  changelog.yml  test.yml
src/file_transfer/: __init__.py  __main__.py
src/redis_file_transfer/: __init__.py  __main__.py  client_id.py  fetch.py  file_filter.py  filter.py  receive.py  send.py
tests/: test_file_filter.py  test_main.py  test_receive.py  test_send.py
